13 November 2007: Wouter
	- Release 3.0.7, tagged, configure.ac moved to 3.0.8.

12 November 2007: Matthijs
	- Fixed man pages

30 October 2007: Wouter
	- Fixup for skip after unknown deleted IXFR RR, otherwise processing
	  would continue at the wrong spot in the packet and process
	  the IXFR as if it were malformed.
	- fixup mark_and_exit for rollback of malformed zone transfers.

29 October 2007: Wouter
	- Fixup bug where malformed IXFR replies cause partial processing in
	  reload (or nsd-patch or nsd-startup). One result is multiple SOA
	  records in zone apex. Fixup rolls back the zone transfer, and waits
	  for NSD to try to load again.

7 August 2007: Mark
	- Report source and zone for denied AXFR attempts.
	- Merged bind2nsd 0.5.0 in contrib from trunk.

7 August 2007: Wouter
	- Compiled on minix 3.1.3 and make some adjustments to ease porting.
	  ECONNABORTED is checked for. sys/select.h included in nsd-notify.
	  SO_REUSEADDR failure is not fatal. PF_INET compat code added.
	  If you compile yourself; strptime and socketpair need compat code.

13 April 2007: Wouter
	- Minor tweak to nsec3.c, more elegant handling of malformed nsec3 
	  records from a zone transfer.

10 April 2007: Wouter
	- Fixup ignored return value in region-allocator. Now returns a NULL
	  memory allocation failure and leaves region in a consistent state.

20 March 2007: Wouter
	- Released 3.0.5.
	- (for 3.0.6) -O2 test for Alpha moved to saner position.

16 March 2007: Wouter
	- port configure to AIX, removed warning on ALIGNMENT in region code. 
	  defined _ALL_SOURCE to get recent C definitions on AIX.
	- improved nsec3.h comments.

22 February 2007: Wouter
	- Zonesdir default is now /etc/nsd.
	  So that the invocation directory is not used to dump files into.
	  The user can change the zonesdir by editing the config file.
	  The directory is created by install, if not an error is printed.
	- updated tpkg tests to use current dir for testing.