@@ -1,3 +1,7 @@
+3 December 2007: Matthijs
+	- Fixup bug where data related files are looked up in the wrong 
+	  directory when chrooted with chrootdir ending with a slash. 
+
 13 November 2007: Wouter
 	- Release 3.0.7, tagged, configure.ac moved to 3.0.8.
 
